完成与 python 的交互；完成打包方案；修改滚动条样式

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,9 @@ p {
   /* copy from microsoft edge */
   background: #DDDDDD;
 }
+::-webkit-scrollbar{
+  width: 12px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: lightgray;
+}
