--- a/src/App/Nav/Nav.css
+++ b/src/App/Nav/Nav.css
@@ -11,16 +11,35 @@ nav>ul {
     background-color: #efefef;
     border-radius: 8px;
     box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+nav>ul::before {
+    content: "";
+    position: absolute;
+    width: 160px;
+    height: 30px;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2), inset 0 0 8px 0 rgba(0, 0, 0, 0.05);
+    transition: margin-left ease 150ms;
+}
+
+nav>ul[data-selected-index="1"]::before {
+    margin-left: 0;
+}
+
+nav>ul[data-selected-index="2"]::before {
+    margin-left: 160px;
 }
 
 nav>ul>li {
     display: flex;
-    padding: 4px 24px;
+    z-index: 1;
+    width: 160px;
+    height: 30px;
     justify-content: center;
     align-items: center;
     border-radius: 4px;
-}
-nav>ul>li.selected{
-    background-color: #fff;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2), inset 0 0 8px 0 rgba(0,0,0,0.05);
+    cursor: pointer;
 }
