删除菜单栏、默认标题栏，并自定义标题栏

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 
 body {
   color: #262626;
-  background-color: #f7f7f7;
+  background-color: transparent;
   overflow: overlay;
 }
 
@@ -76,9 +76,16 @@ p {
   /* copy from microsoft edge */
   background: #DDDDDD;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   width: 12px;
+  height: 12px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
   background-color: lightgray;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
