--- a/src/App/MultipleAnalyses/MultipleAnalyses.css
+++ b/src/App/MultipleAnalyses/MultipleAnalyses.css
@@ -1,7 +1,8 @@
 #multiple-analyses {
-    margin: 0 auto;
-    padding: 18px 70px;
     display: grid;
+    margin: 0 auto;
+    padding: 0 70px;
+    width: min-content;
     grid-template-columns: 300px auto;
     grid-row: auto auto auto;
 }
