--- a/src/App/Nav/Nav.css
+++ b/src/App/Nav/Nav.css
@@ -1,17 +1,20 @@
 nav {
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
+    position: fixed;
+    top: 30px;
     left: 0;
+    right: 0;
+    z-index: 100;
     display: flex;
-    padding: 12px 0;
     justify-content: center;
-    align-items: center;
+    padding: 12px 0;
     background-color: rgba(247, 247, 247, 0.6);
     backdrop-filter: blur(20px);
+    user-select: none;
 }
 
 nav>ul {
+    grid-column: 1/2;
+    grid-row: 2/3;
     display: flex;
     padding: 4px;
     background-color: #efefef;
@@ -48,4 +51,11 @@ nav>ul>li {
     align-items: center;
     border-radius: 4px;
     cursor: pointer;
+}
+
+nav>.exitButton {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    right: 60px;
 }
