--- a/src/App/SingleAnalyses/SingleAnalyses.css
+++ b/src/App/SingleAnalyses/SingleAnalyses.css
@@ -1,7 +1,8 @@
 #single-analyses {
-    margin: 0 auto;
-    padding: 18px 70px;
     display: grid;
+    margin: 0 auto;
+    padding: 0 70px;
+    width: min-content;
     grid-template-columns: 300px auto;
     grid-template-rows: auto auto;
 }
