添加图表处理逻辑，添加 python demo；更改外观

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -16,10 +16,11 @@
 
 .tab-container {
   position: absolute;
-  top: 0;
+  top: 92px;
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 70px 0 24px 0;
+  padding: 0 0 24px 0;
   overflow: auto;
+  z-index: 0;
 }
