--- a/src/App/App.css
+++ b/src/App/App.css
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 12px 12px 10px 10px;
+  /* border-radius: 12px 12px 10px 10px; */
   overflow: hidden;
   background-color: #f7f7f7;
 }
