--- a/src/App/TitleBar/TitleBar.css
+++ b/src/App/TitleBar/TitleBar.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     color: white;
-    border-radius: 10px 10px 0 0;
+    /* border-radius: 10px 10px 0 0; */
     overflow: hidden;
     -webkit-app-region: drag;
 }
