--- a/src/App/MultipleAnalyses/MultipleAnalyses.css
+++ b/src/App/MultipleAnalyses/MultipleAnalyses.css
@@ -1,7 +1,8 @@
 #multiple-analyses {
-    margin: 0 auto;
-    padding: 18px 70px;
     display: grid;
+    margin: 0 auto;
+    padding: 0 70px;
+    width: min-content;
     grid-template-columns: 300px auto;
     grid-row: auto auto auto;
 }
@@ -44,6 +45,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#dimensionPieChart, #attitudePieChart {
+    height: 300px;
+    width: 250px;
+    z-index: -1;
 }
 
 #multiple-analyses>.results-area {
