完成多条分析逻辑和页面、图表；完成文字角度标注

--- a/src/App/MultipleAnalyses/MultipleAnalyses.css
+++ b/src/App/MultipleAnalyses/MultipleAnalyses.css
@@ -48,9 +48,9 @@
 }
 
 #dimensionPieChart, #attitudePieChart {
-    height: 300px;
-    width: 250px;
-    z-index: -1;
+    height: 250px;
+    width: 300px;
+    z-index: 0;
 }
 
 #multiple-analyses>.results-area {
@@ -59,62 +59,22 @@
 }
 
 #multiple-analyses .result-item {
-    display: grid;
-    grid-template-rows: repeat(auto, 6);
-    grid-template-columns: repeat(auto, 3);
-    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    padding: 4px 16px;
     margin-top: 20px;
     background-color: #fff;
     border-radius: 4px;
-    box-shadow: 0px 1.6px 3.6px rgb(0 0 0 / 13%), 0px 0px 2.9px rgb(0 0 0 / 11%)
+    box-shadow: 0px 1.6px 3.6px rgb(0 0 0 / 13%), 0px 0px 2.9px rgb(0 0 0 / 11%);
+    font-size: 14px
 }
 
-#multiple-analyses .result-item>.result-item-commentText {
-    grid-row: 1/2;
-    grid-column: 1/4;
+#multiple-analyses .result-item p {
+    font-size: 12px;
+    margin-bottom: 8px;
+    margin-left: 8px;
 }
 
-#multiple-analyses .result-item>.result-item-commentText+p {
-    grid-row: 2/3;
-    grid-column: 1/4;
-}
-
-#multiple-analyses .result-item>.result-item-dimension {
-    grid-row: 3/4;
-    grid-column: 1/2;
-}
-
-#multiple-analyses .result-item>.result-item-dimension+p {
-    grid-row: 4/5;
-    grid-column: 1/2;
-}
-
-#multiple-analyses .result-item>.result-item-attitude {
-    grid-row: 3/4;
-    grid-column: 2/3;
-}
-
-#multiple-analyses .result-item>.result-item-attitude+p {
-    grid-row: 4/5;
-    grid-column: 2/3;
-}
-
-#multiple-analyses .result-item>.result-item-textFeatures {
-    grid-row: 3/4;
-    grid-column: 3/4;
-}
-
-#multiple-analyses .result-item>.result-item-textFeatures+p {
-    grid-row: 4/5;
-    grid-column: 3/4;
-}
-
-#multiple-analyses .result-item>.result-item-reply {
-    grid-row: 5/6;
-    grid-column: 1/4;
-}
-
-#multiple-analyses .result-item>.result-item-reply+p {
-    grid-row: 6/7;
-    grid-column: 1/4;
+#multiple-analyses .result-item h2 {
+    font-size: 14px;
 }
